<resources>

    <!-- App -->
    <string name="app_name">Clinic</string>

    <!-- App strings -->
    <string name="manage_doctors">Gerenciar Médicos</string>
    <string name="manage_patients">Gerenciar Pacientes</string>
    <string name="manage_appointments">Gerenciar Consultas</string>
    <string name="add">Adicionar</string>
    <string name="list">Listar</string>
    <string name="add_doctor">Adicionar Médico</string>
    <string name="all_fields">* Todos os campos devem ser preenchidos</string>
    <string name="name">nome</string>
    <string name="crm">CRM</string>
    <string name="address">logradouro</string>
    <string name="number">número</string>
    <string name="city">cidade</string>
    <string name="cellphone">celular</string>
    <string name="phone">telefone fixo</string>
    <string name="integrates">observações</string>
    <string name="end_date">horário de término</string>
    <string name="start_date">data de início</string>
    <string name="add_appointment">Adicionar Consulta</string>
    <string name="add_patient">Adicionar Paciente</string>
    <string name="doctors">Médicos</string>
    <string name="appointments">Consultas</string>
    <string name="patients">Pacientes</string>
    <string name="delete">Excluir</string>
    <string name="edit">Editar</string>
    <string name="edit_appointment">Editar Consulta</string>
    <string name="edit_doctor">Editar Doutor</string>

    <!-- Arrays -->
    <string-array name="brazil_states_array">
        <item>Selecione seu Estado</item>
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>
    <string-array name="blood_types_array">
        <item>Selecione seu tipo Sanguineio</item>
        <item>O−</item>
        <item>O+</item>
        <item>A−</item>
        <item>A+</item>
        <item>B−</item>
        <item>B+</item>
        <item>AB−</item>
        <item>AB+</item>
    </string-array>
    <string-array name="patient_placeholder_array">
        <item>patient</item>
    </string-array>
    <string-array name="doctor_placeholder_array">
        <item>doctor</item>
    </string-array>

</resources>
